--- a/src/app/pages/lightcontrol/light-main/light-main.component.html
+++ b/src/app/pages/lightcontrol/light-main/light-main.component.html
@@ -1,4 +1,4 @@
-<div style="display:flex; height: 100%; width: 100%">
+<div class="mat-tab-parent">
     <mat-tab-group mat-align-tabs="center" class="mat-tab-fill-height" animationDuration="2000ms">
         <mat-tab label="Ground Floor Zone 1">Content 1</mat-tab>
         <mat-tab label="Ground Floor Zone 2" class="mat-tab-body-wrapper">
