--- a/src/app/main/app.component.css
+++ b/src/app/main/app.component.css
@@ -16,7 +16,7 @@
 .header{
     width: 100%;
     height: 8%;
-    margin-top: 2%;
+    margin-top: 0;
     left: 0;
     right: 0;
     display: inline-block;
