Dimmer fix | angular version fix

--- a/src/app/main/app.component.html
+++ b/src/app/main/app.component.html
@@ -8,7 +8,7 @@
     <div class="header text">
       <header-navigation></header-navigation>
     </div>
-    <div style="height:81%; width:100%; margin-top:2%">
+    <div style="height:81%; width:100%; margin-top:2%;">
       <router-outlet></router-outlet>
     </div>
   </div>
