--- a/src/app/pages/lightcontrol/light-dimmer/light-dimmer.component.html
+++ b/src/app/pages/lightcontrol/light-dimmer/light-dimmer.component.html
@@ -1,10 +1,15 @@
-<div id="container">
+<!-- <div id="container">
     <div style="height:100%; width: 5px;background-color:greenyellow"></div>
     <div id="item">
 
     </div>
+</div> -->
+
+<div class="container">
+    <div style="height:100%; width: 5px;background-color:greenyellow"></div>
+  <div class="item" cdkDragBoundary=".container" cdkDrag>
+   
+  </div>
 </div>
-
-
 <!-- <div style="color:red"> The currentX is= {{ currentX}} currentY is= {{ currentY}} initialY= {{ initialY}} yOffset=
     {{ yOffset}}</div> -->
