--- a/src/app/pages/lightcontrol/light-dimmer/light-dimmer.component.css
+++ b/src/app/pages/lightcontrol/light-dimmer/light-dimmer.component.css
@@ -5,7 +5,7 @@
   background-color:transparent
 }
 
-#container {
+.container {
     width: 100%;
     height: 60%;
     background-color: transparent;
@@ -16,8 +16,8 @@
     touch-action: none;
     position: relative;
   }
-  #item {
-    width: 20px;
+  .item {
+    width: 100%;
     height: 20%;
     background-color: white; 
     border-radius: 5%;
