--- a/src/app/pages/calender/calender.component.css
+++ b/src/app/pages/calender/calender.component.css
@@ -20,3 +20,21 @@
     font-weight: bold;
     color: #2989d8;
 }
+
+.dayLabel{
+    width: 60%; 
+    height:60%; 
+    transform: translateX(30%); 
+    margin-top: 35%;
+}
+
+.dayBdayLabel{
+    width: 60%; 
+    height:60%; 
+    transform: translateX(30%); 
+    margin-top: 35%;
+    font-weight: bold;
+    color: forestgreen;
+    background-image: url('../../images/Extras/yellowcandle.png');
+    background-size: 100%;
+}
