--- a/src/app/pages/lightcontrol/light-switch/light-switch.component.html
+++ b/src/app/pages/lightcontrol/light-switch/light-switch.component.html
@@ -1,3 +1,5 @@
-<div id="switchcase">
-    <div id="switch"></div>
+<div class="switchcase" #container>
+    <div #item class="switch" cdkDragBoundary=".switchcase" [cdkDragFreeDragPosition]="dragPosition"
+     (cdkDragEnded)="onDragEnded($event)" ON cdkDrag></div>
 </div>
+<!-- <button (click)='dragSwitch()'>check</button> -->
