--- a/src/app/pages/weather/weather.component.html
+++ b/src/app/pages/weather/weather.component.html
@@ -5,7 +5,7 @@
     <div style="height:100%; width:40%; position:relative; float:left">
         <div style="position:relative; height:70%; width:100%; margin:0 auto; transform:translateY(-50%); top: 50%; ">
             <!-- <div class="innerBoxDay text md" [routerLink] = "['/weatherdetail']">Monday</div> -->
-            <div class="innerBoxDay text md" model-trigger>{{perDayWeather.day}}</div>
+            <div class="innerBoxDay text md" [routerLink] = "['/weatherdetail']" model-trigger>{{perDayWeather.day}}</div>
             <div class="innerBoxWeather text md" style="font-size: 1.5vw">{{perDayWeather.dayWeather}}</div>
         </div>
     </div>
