--- a/src/app/pages/weather/weatherdetail.component.css
+++ b/src/app/pages/weather/weatherdetail.component.css
@@ -3,12 +3,14 @@
     height:100%;
     background-color: rgb(22, 63, 130);
     color:white; 
+    position: relative;
 }
 
 header{
     display: inline;
     text-align: left;
     width: 100%;
+    height:10%;
     margin: 0 auto;
     
 }
@@ -24,16 +26,127 @@ header li{
     margin: 0;
     }
 
+section {
+    float:left;
+}
+    
+section ul{
+    margin: 0;
+    padding: 0;
+}
+
+
+section li{
+    display:table;
+    padding: 1% 0 0 0;
+    margin: 0;
+    }
+
+.day{
+    width:50%;    float: left;
+    color: rgb(88, 133, 206);
+}
+
+.value{
+    width:50%;    float: left;
+    color: white;
+}
+
 .daynight{
     width: 50%;
-    
+}
+
+.daynighttemp{
+    font-size: 3.0vw; 
+    font-weight:lighter; 
+    }
+
+.daynightstatus{
+    top: 50%; 
+    transform: translateY(-90%); 
+    width:60%; 
+    text-align: right;
 }
 
 .box{
-    margin: 2% 0 0 0;
+    margin: 0 0 0 0;
     float:left;
     width: 50%;
     text-align: left;
+}
+
+.boxmain{
+    margin: 2% 0 0 0;
+    text-align: left;
+    width: 100%;
+    display: inline-block;
+}
+
+.historical{
+    width:33%;    
+    float: left;
+}
+
+.lightbluefont{
+    color: rgb(88, 133, 206);
+}
+
+aside{
+    width: 50%;
+    float:right;
+    height: 70%;
+}
+
+.outerBox {
+    position:relative; 
+    width:48%; 
+    height:100%; 
+    border:solid 2px #2989d8;
+    border-top-right-radius: 10px 10px;
+    border-top-left-radius: 10px 10px;
+    border-bottom-right-radius: 10px 10px;
+    border-bottom-left-radius: 10px 10px;
+ }
+
+.titleBox{
+    height:10%; 
+    width:100%; 
+  }
+
+ .innerBox{
+    margin: 0 auto;
+    margin-top: 3%;
+    width: 100%;
+    height: 82%;
+    border:solid 2px #2989d8;
+  }
+
+ table {
+    width: 80%;
+    height: 100%;
+    border:0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 auto;   
+   }
+
+table tbody {
+    display: block;
+    overflow: auto;
+    height: 100%;
+}
+
+table thead tr {
+    display: block;
+    
+}
+
+tr:nth-child(even) {background-color:rgb(40, 75, 131);}
+tr:nth-child(odd) {background-color:rgb(30, 66, 124);}
+
+table thead th{
+    background-color: black;
+    border: black solid ;
 }
 
 .weather-L-R-Container{
@@ -115,3 +228,29 @@ header li{
     font-size:2.1vw; 
     color: white;
  }
+
+ ::-webkit-scrollbar {
+    width: 15px;
+    height: 13px; 
+    background-color: rgb(22, 63, 130);
+}
+
+::-webkit-scrollbar-track
+{
+	 -webkit-box-shadow: 12px 0 0 10px rgb(22, 63, 130);
+    /* border-radius: 10px;  */
+    border-top-right-radius: 10px 10px;
+    border-bottom-right-radius: 10px 10px;
+	background-color:  rgb(22, 63, 130);
+}
+
+::-webkit-scrollbar-thumb
+{
+    background-color: rgb(22, 63, 130);
+     border: 10px solid transparent;
+    border-radius: 30px;
+    background-clip: content-box;
+    border-width: 4px; 
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+    /* background-color: #aaaaaa; */
+}
